[gd_scene load_steps=6 format=3 uid="uid://c5qb6gt3jrrik"]

[ext_resource type="Script" uid="uid://doyvft3kt0epa" path="res://scripts/slider.gd" id="1_24ij4"]
[ext_resource type="LabelSettings" uid="uid://b174cfjrxrifj" path="res://fonts/default_large.tres" id="1_tdie8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24ij4"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.227451, 0.266667, 0.4, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhkcm"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c2jh2"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[node name="slider" type="HBoxContainer"]
offset_right = 364.0
offset_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_24ij4")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "example: "
label_settings = ExtResource("1_tdie8")

[node name="HSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(250, 16)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_24ij4")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_mhkcm")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_c2jh2")
step = 0.0

[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="HSlider" to="." method="_on_h_slider_drag_started"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
